@@ -1,4 +1,7 @@
 Version 1.0.14:
+- Faster UIDL implementation: Do not create a sorted list of received UIDs. Do
+  a binary search for every received UID instead. Patch by Dimitrios Apostolou.
+  Thanks!
 - Gnulib upate to 2008-05-04. Use getpass-gnu instead of getpass module.
 
 Version 1.0.13:
